fixed overflow issues with dropdown in /recipebox

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -98,7 +98,6 @@ main {
   display: grid;
   width: clamp(50px, 100%, 1200px);
   padding: 2em;
-  overflow: hidden;
   box-sizing: border-box;
 }
   /* Content, box shadow for styling */
